--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
+    "react-clock": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
+    "react-live-clock": "^5.0.16",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
@@ -24,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "./deploy-to-ghpages.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "cz-conventional-changelog": "^3.3.0"
   }
 }
