--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "silent-ticking",
+  "homepage": "https://f1982.github.io/silent-ticking/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "react-moment": "^1.1.1",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
