--- a/package.json
+++ b/package.json
@@ -4,34 +4,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "4.11.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "react": "^17.0.1",
-    "react-clock": "^3.0.0",
-    "react-dom": "^17.0.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-live-clock": "^5.0.16",
     "react-moment": "^1.1.1",
-    "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.0.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/styled-components": "^5.1.7",
+    "@commitlint/cli": "9.0.1",
+    "@commitlint/config-conventional": "9.0.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "prettier": "2.1.2",
+    "react-scripts": "3.4.4",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-standard": "4.0.1",
+    "stylelint": "13.8.0",
+    "stylelint-config-recommended": "3.0.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-config-styled-components": "0.1.1",
+    "typescript": "3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "eslint:check": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "stylelint": "stylelint 'src/**/*.tsx'",
     "deploy": "./deploy-to-ghpages.sh"
   },
   "eslintConfig": {
@@ -51,9 +76,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.7",
-    "cz-conventional-changelog": "^3.3.0"
   }
 }
