feat(all): recode clock and add setting functions

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment-timezone": "^0.5.33",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-full-screen": "^1.0.1",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-live-clock": "^5.0.16",
@@ -19,21 +20,19 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@types/node": "^12.0.0",
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
+    "@commitlint/cli": "9.0.1",
+    "@commitlint/config-conventional": "9.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
     "@types/styled-components": "^5.1.7",
-    "@commitlint/cli": "9.0.1",
-    "@commitlint/config-conventional": "9.0.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "prettier": "2.1.2",
-    "react-scripts": "3.4.4",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-react-app": "5.2.1",
     "eslint-config-standard": "14.1.1",
@@ -44,6 +43,8 @@
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
     "eslint-plugin-standard": "4.0.1",
+    "prettier": "2.1.2",
+    "react-scripts": "3.4.4",
     "stylelint": "13.8.0",
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-standard": "20.0.0",
