fix(chore): change homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silent-ticking",
-  "homepage": "https://f1982.github.io/silent-ticking/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
