--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Build the project
       run: yarn build
 
-    - name: Run unit tests
-      run: yarn test
+    # - name: Run unit tests
+    #   run: yarn test
       
     - name: Build the website
       run: yarn build && touch ./build/.nojekyll
